k3s/tests/e2e/cis_amd64_resource_files/clusterip.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-clusterip
spec:
  selector:
    matchLabels:
      k8s-app: nginx-app-clusterip
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: nginx-app-clusterip
    spec:
      containers:
      - name: nginx
        image: ranchertest/mytestcontainer:unprivileged
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: nginx-app-clusterip
  name: nginx-clusterip-svc
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    k8s-app: nginx-app-clusterip
