k3s/tests/e2e/cis_amd64_resource_files/loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-loadbalancer
spec:
  selector:
    matchLabels:
      k8s-app: nginx-app-loadbalancer
  replicas: 2
  template:
    metadata:
      labels:
        k8s-app: nginx-app-loadbalancer
    spec:
      containers:
      - name: nginx
        image: ranchertest/mytestcontainer:unprivileged
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: nginx-app-loadbalancer
  name: nginx-loadbalancer-svc
  namespace: default
spec:
  type: LoadBalancer
  ports:
  - port: 81
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    k8s-app: nginx-app-loadbalancer
